# tui-chat-app

./: Cargo.toml
client/: Cargo.toml
client/src/: handler.rs  main.rs  tui.rs
common/: Cargo.toml
common/src/: client.rs  compat.rs  lib.rs  server.rs
server/: Cargo.toml
server/src/: handler.rs  main.rs
