[workspace]
members = [
    "server",
    "client"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eemeli Lehtonen <overpeek.fin@gmail.com>"]

[workspace.dependencies]
eznet = "0.2.0"
clap = { version = "4.0.8", features = ["derive"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0.37"
tui = "0.19.0"
crossterm = "0.25.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

