[package]
name = "tui-chat-app-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0"
eznet.workspace = true
clap.workspace = true
tokio.workspace = true
thiserror.workspace = true
tui.workspace = true
crossterm.workspace = true
tui-chat-app-common = { path = "../common" }
