[package]
name = "tui-chat-app-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.5.10"
eznet.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["macros"] }
thiserror.workspace = true
tui.workspace = true
crossterm.workspace = true
uuid.workspace = true
rand.workspace = true
tui-chat-app-common = { path = "../common" }
chrono = "0.4.22"
