[package]
name = "tui-chat-app-common"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
bytes = "1.2.1"
bincode = "1.3.3"
thiserror.workspace = true
uuid.workspace = true
