[package]
name = "tui-chat-app-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
eznet.workspace = true
clap.workspace = true
tokio.workspace = true
thiserror.workspace = true
tui-chat-app-common = { path = "../common" }
